--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@cds/core": "^6.1.0",
+    "@clr/angular": "^13.6.0",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.6.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
